--- a/02-FlexBox/assignment/css/_components.content.scss
+++ b/02-FlexBox/assignment/css/_components.content.scss
@@ -1,5 +1,11 @@
+@import 'settings.variables';
+
 html {
     box-sizing: border-box;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+    color: white;
+    font-size: 32px;
+    text-align: center;
 }
 
 *,
@@ -8,6 +14,50 @@ html {
     box-sizing: inherit;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-rows: 149px 81px 649px 152px; 
+}
+
+header {
+    padding: 1rem;
+    background-color: $red;
+}
+
+nav {
+    padding: 0.5rem;
+    background-color: $green;
+    display: flex;
+    justify-content: space-around;
+}
+
+.content {
+    display: grid;
+    grid-template-columns: 31.16% 68.83%;
+}
+
+aside {
+    padding: 2rem;
+    background-color: $purple;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+img {
+    width: 50%;
+}
+
 .main {
     padding: 2rem;
+    background-color: $orange;
+}
+
+.lorem-ipsum {
+    font-size: 12px;
+}
+
+footer {
+    padding: 1rem;
+    background-color: $blue;
 }
