Use of comments to explain code

--- a/02-FlexBox/assignment/css/_components.content.scss
+++ b/02-FlexBox/assignment/css/_components.content.scss
@@ -1,3 +1,5 @@
+/* set font family, color, size, and alignment
+font size smaller on mobile */
 html {
     box-sizing: border-box;
     font-family: "Helvetica Neue", Arial, sans-serif;
@@ -15,6 +17,8 @@ html {
     box-sizing: inherit;
 }
 
+/* CSS grid to match design spec link
+auto row height on mobile */
 .grid-container {
     display: grid;
     grid-template-rows: 149fr 81fr 649fr 152fr;
@@ -23,11 +27,13 @@ html {
     }
 }
 
+/* red header */
 header {
     padding: 1rem;
     background-color: $red;
 }
 
+/* green nav styled with flexbox */
 nav {
     padding: 0.5rem;
     background-color: $green;
@@ -35,11 +41,13 @@ nav {
     justify-content: space-around;
 }
 
+/* fr units to match dimensions in design spec */
 .content {
     display: grid;
     grid-template-columns: 374fr 826fr;
 }
 
+/* purple aside styled with flexbox */
 aside {
     padding: 2rem;
     background-color: $purple;
@@ -48,19 +56,23 @@ aside {
     align-items: center;
 }
 
+/* resize images */
 img {
     width: 50%;
 }
 
+/* orange main section */
 .main {
     padding: 2rem;
     background-color: $orange;
 }
 
+/* lorem ipsum dummy text */
 .lorem-ipsum {
     font-size: 12px;
 }
 
+/* blue footer */
 footer {
     padding: 1rem;
     background-color: $blue;
